<resources>
    <!--Don't translate this!-->
    <string name="amaztimer" translatable="false">AmazTimer</string>
    <string name="kcal" translatable="false">Kcal</string>
    <string name="nullinfo" translatable="false">--</string>
    <!--Start translating here-->
    <string name="start">Start</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="sets">Sets</string>
    <string name="hr">HR</string>
    <string name="prepare">Get prepared!</string>
    <string name="settings">Settings</string>
    <string name="batterysaving">Battery saving</string>
    <string name="lang">Language</string>
    <string name="startsettings">Long press start for settings</string>
    <string name="hrEnabled">Heart rate monitoring</string>
    <string name="presets">Presets</string>
    <string name="edit">Edit</string>
    <string name="misc">Misc</string>
    <string name="weight">Weight</string>
    <string name="age">Year of birth</string>
    <string name="gender">Gender</string>
    <string name="averagehr">Average hr</string>
    <string name="maxhr">Max hr</string>
    <string name="minhr">Min hr</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="latesttrain">Latest train</string>
    <string name="morepreparetime">More time to prepare</string>
    <string name="morepreparetimesum">If you enable this, prepare timer will last 60 seconds instead of 5, so you\'ll have enough time to start an activity</string>
    <string name="repsmode">Reps mode</string>
    <string name="normalmode">Normal mode</string>
    <string name="hrzone">HR zone</string>
    <string name="appinfo">App info</string>
    <string name="appcredit">App by @micrusa</string>
    <string name="translationcredit">Translation by @micrusa</string>
    <string name="thanksto">Thanks to:</string>
    <string name="thanksfor">for</string>
    <string name="allcontributors">All contributors</string>
    <string name="ageyo">years old</string>
    <string name="workout">Workout mode</string>
    <string name="workoutsum">No timers, end sets manually. Useful for weight trainings</string>
    <string name="modes">Modes</string>
    <string name="enableprep">Enable prepare timer</string>
    <string name="chrono">Chrono mode</string>
    <string name="chronosum">It will vibrate with the selected intervals but instead of showing the countdown on the screen, a chronometer will start</string>
    <string name="tcxexport">TCX Export</string>
    <string name="tcxsum">Can be uploaded to strava. Will be exported to Internal Storage/AmazTimer/</string>
    <string name="tcxexporting">Exporting to TCX file...</string>
    <string name="tcxerror">Error saving TCX file</string>
    <string name="timersound">Enable sound</string>
    <string name="finishset">Finish set</string>
    <string name="time">Time</string>
    <string name="currentset">Curr. set</string>
    <string name="heartrate">Heart Rate</string>
    <string name="enablehrzone">Enable HR zone</string>
    <string name="invertkeys">Invert key layout</string>
    <string name="customization">Customization</string>
    <string name="hrzonesum">A small bar will have a color depending on current calculated hr zone</string>
    <string name="cancel">Cancel</string>
    <string name="vibration">Vibration multiplier</string>
    <string name="vibrationsum">Vibrations will get multiplied by this number</string>
    <string name="hrstart">Start getting HR values on app start</string>
    <string name="hrstartsum">This will avoid having some secs without HR values due to late starting</string>
    <string name="reps">Reps</string>
    <string name="repscountermode">Reps counter mode</string>
    <string name="selectexercise">Select exercise</string>
    <string name="bicepscurl">Biceps curl</string>
    <string name="benchpress">Bench press</string>
    <string name="crunches">Crunches</string>
    <string name="pullups">Pull Ups</string>
    <string name="jjacks">Jumping jacks</string>
    <string name="other">Other</string>
    <string name="deleteworkout">Do you want to delete the workout?</string>
    <string name="deletetimer">Do you want to delete the timer?</string>
    <string name="workouts">Workouts</string>
    <string name="workout_name">Workout</string>
    <string name="duration">Duration</string>
    <string name="worktime">Work time</string>
    <string name="resttime">Rest time</string>

    <string name="saved">Saved Timers</string>
    <string name="create_new">Create New</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="profile">Profile</string>

    <string name="gps">GPS</string>
</resources>
