<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">

        <SwitchPreferenceCompat
            app:key="batterySaving"
            app:title="@string/batterysaving"/>

        <SwitchPreferenceCompat
            app:key="hrOn"
            app:defaultValue="true"
            app:title="@string/hrEnabled"/>

        <ListPreference
            app:key="lang"
            app:title="@string/lang"
            app:entries="@array/languages"
            app:entryValues="@array/langvalues"
            app:defaultValue="en" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <Preference
            app:key="saved"
            app:title="@string/saved" />

        <ListPreference
            app:key="gender"
            app:title="@string/gender"
            app:entries="@array/gender"
            app:entryValues="@array/gendervalues"
            app:defaultValue="male" />

        <SeekBarPreference
            app:key="weight"
            app:title="@string/weight"
            app:defaultValue="70"
            app:max="150"
            app:min="30" />

        <SeekBarPreference
            app:key="age"
            app:title="@string/age"
            app:defaultValue="20"
            app:max="100"
            app:min="10" />

    </PreferenceCategory>

</PreferenceScreen>
