<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 Miguel Cruces
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNew">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/minus1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/remove" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sets"
                    android:textSize="5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/sets_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="8"
                    android:textSize="7.5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </LinearLayout>
            <Button
                android:id="@+id/plus1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/add" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/minus2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/remove" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work"
                    android:textSize="5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/work_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="00:30"
                    android:textSize="7.5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </LinearLayout>
            <Button
                android:id="@+id/plus2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/add" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/minus3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/remove" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rest"
                    android:textSize="5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/rest_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="00:30"
                    android:textSize="7.5pt"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </LinearLayout>
            <Button
                android:id="@+id/plus3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/add" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="7.5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/create_new_hr_switch"
                android:text="@string/heartrate"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:textSize="6pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/new_mode_group"
            android:layout_marginTop="7.5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/new_mode_default"
                android:text="@string/normalmode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/new_mode_reps"
                android:text="@string/repsmode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/new_mode_workout"
                android:text="@string/workout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/new_mode_repscounter"
                android:text="@string/repscountermode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <Button
            android:id="@+id/create_new_start"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="7.5pt"
            android:text="@string/start" />
        <Button
            android:id="@+id/create_new_save"
            android:layout_marginTop="3dp"
            android:background="@drawable/circle_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="7.5pt"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>