<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:keepScreenOn="true"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/text_heartrate"
        android:layout_width="67dp"
        android:layout_height="12dp"
        android:fontFamily="@font/applemint"
        android:text="@string/heartrate"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/applemint"
        android:text="21:56"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="44dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/status"
        android:layout_width="143dp"
        android:layout_height="42.5dp"
        android:background="@color/rest"
        android:fontFamily="@font/applemint"
        android:text="@string/work"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="2dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:background="@color/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view4"
        android:layout_width="2dp"
        android:layout_height="50dp"
        android:layout_marginEnd="68dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view6"
        android:layout_width="2dp"
        android:layout_height="42.5dp"
        android:layout_marginStart="68dp"
        android:background="@color/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/repscounter"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:fontFamily="@font/applemint"
        android:text="35"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/intervaltime"
        android:layout_width="62dp"
        android:layout_height="37dp"
        android:fontFamily="@font/applemint"
        android:text="03:15"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/heartrate"
        app:layout_constraintStart_toEndOf="@+id/repscounter"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/heartrate"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:fontFamily="@font/applemint"
        android:text="@string/nullinfo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/applemint"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <Button
        android:id="@+id/finishset"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/applemint"
        android:text="@string/finishset"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="68dp"
        android:layout_height="12dp"
        android:fontFamily="@font/applemint"
        android:text="@string/reps"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repscounter" />

    <TextView
        android:id="@+id/text_currset"
        android:layout_width="62dp"
        android:layout_height="12dp"
        android:fontFamily="@font/applemint"
        android:text="@string/currentset"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/text_heartrate"
        app:layout_constraintStart_toEndOf="@+id/text_time" />

    <View
        android:id="@+id/hrzoneView"
        android:layout_width="30dp"
        android:layout_height="3dp"
        android:layout_marginBottom="5dp"
        android:background="@color/zonedefault"
        app:layout_constraintBottom_toTopOf="@+id/text_heartrate"
        app:layout_constraintEnd_toEndOf="@+id/heartrate"
        app:layout_constraintStart_toStartOf="@+id/heartrate" />

    <TextView
        android:id="@+id/sets"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/applemint"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/status"
        app:layout_constraintTop_toTopOf="@+id/status"
        tools:text="@string/nullinfo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="40dp"
        android:layout_height="10dp"
        android:text="@string/sets"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/sets"
        app:layout_constraintStart_toStartOf="@+id/sets"
        app:layout_constraintTop_toBottomOf="@+id/sets" />

</androidx.constraintlayout.widget.ConstraintLayout>